--- a/training.ipynb
+++ b/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,40 +24,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import dataset\n",
-    "df = pd.read_csv('data.csv',on_bad_lines='skip')"
+    "df = pd.read_csv('data.csv',on_bad_lines='skip') #ignore badline from dataset\n",
+    "df.isna().sum()\n",
+    "df.duplicated().sum()\n",
+    "#only 1 missing value, and no duplicate found,will drop the bad record directly\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.dropna(inplace = True)"
-   ]
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    496801\n",
+       "0     89702\n",
+       "2     83137\n",
+       "Name: strength, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1    496801\n",
+      "0     89702\n",
+      "2     83137\n",
+      "Name: strength, dtype: int64\n",
+      "Result Ratio: 0 - 0.13, 1 - 0.74, 2 - 0.12\n"
+     ]
+    }
+   ],
    "source": [
+    "#Since the data\n",
+    "#Check label distribution\n",
+    "print(df['strength'].value_counts())\n",
+    "#And Ratio\n",
     "print(f\"Result Ratio: 0 - {df['strength'].value_counts()[0]/len(df):.2f}, 1 - {df['strength'].value_counts()[1]/len(df):.2f}, 2 - {df['strength'].value_counts()[2]/len(df):.2f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def word_to_char(word):\n",
-    "    return list(word)"
    ]
   },
   {
