update model to return a value

--- a/training.ipynb
+++ b/training.ipynb
@@ -621,22 +621,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2])"
+       "array([[0.77070576, 0.16072197, 0.06857225]], dtype=float32)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text = 'ehfifkiafhdskjfh$%^789kfhdsbf!fjdsnlfsdohfna.bfrah;fdba.kj'\n",
+    "text = '123456'\n",
     "\n",
     "def word_to_char(word):\n",
     "    return list(word)\n",
@@ -645,16 +645,29 @@
     "    vectorizer = pickle.load(f)\n",
     "\n",
     "X  = vectorizer.transform([text])\n",
-    "y_pred = model.predict(X)\n",
+    "y_pred = model.predict_proba(X)\n",
     "y_pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.77070576"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(y_pred[0])"
+   ]
   },
   {
    "cell_type": "code",
