--- a/training.ipynb
+++ b/training.ipynb
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
        "array([[0.77070576, 0.16072197, 0.06857225]], dtype=float32)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,22 +651,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.77070576"
+       "0.068572246"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "max(y_pred[0])"
+    "y_pred[0][2]"
    ]
   },
   {
